Ajout d'un fichier CSV pour stocker les données acquises

--- a/resources/index.html
+++ b/resources/index.html
@@ -35,7 +35,7 @@ body{text-align:center;font-family:\"Trebuchet MS\",Arial;background-color:#999}
 
     <p>CSV header = Date, Time, Latitue, Longitude, Temperature, Pressure, Humidity, Gas Resistance</p>
     <p>CSV entry = <div id='csventry'></div></p>
-
+    <button onclick='getCSV()'>Get CSV File !</button>
     <script>
       function loadScript(url, callback=function(){}){
   		var script = document.createElement('script');
